spacing fixes

--- a/src/index.css
+++ b/src/index.css
@@ -1203,6 +1203,6 @@ hr.horizontalLine.blue {
 .guage-chart svg {
   @apply !relative !top-[-0.5rem];
 }
-.database-widgets .p-card {
+.widgets-spacing .p-card {
   @apply p-1.5;
 }
